--- a/css/style-index.css
+++ b/css/style-index.css
@@ -102,7 +102,7 @@ body{
 }
 
 .menu-inicio ul.menu-inicio-pestania li {
-    background: rgb(119, 189, 218);
+    background: gray;
 }
 
 .menu-inicio ul.menu-inicio-pestania li a {
