--- a/css/style-somos.css
+++ b/css/style-somos.css
@@ -41,6 +41,33 @@ body{
 
 /*FIN ESTILOS GENERALES*/
 
+/*ventana emergente*/
+.ventana{
+    background: rgba(0,0,102,1);
+    width: 30%;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding: 33px;
+    min-height: 250px;
+    border-radius: 22px;
+    position: absolute;
+    left: 33%;
+    top: 70%;
+    display: none;
+    z-index: 1;
+}
+.ventana p{
+    display: none;
+}
+#cerrar{
+    position: absolute;
+    right: 5px;
+    top: 6px;
+}
+/*fin ventana emergente*/
+
 /*INICIO DE CABECERA*/
 #header{
     width: 100%;
@@ -75,7 +102,7 @@ body{
 }
 #menu ul li a{
     display: block;
-    color: aqua;
+    color: white;
     text-decoration: none;
     transition: all 200ms;
 }
